<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A3.Poole.Connor</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="percent">Percent</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="split_bill">Split Bill?</string>
    <string name="per_person">Per Person</string>
   
    <string-array name="split_array">
        <item>No</item>
        <item>2 ways</item>
        <item>3 ways</item>
        <item>4 ways</item>
    </string-array>
    

</resources>
