<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="0dp"
    tools:context="${relativePackage}.${activityClass}" >
    
    <LinearLayout
        android:baselineAligned="true"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    android:padding="0dp"
	    android:id="@+id/row1">
	    
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".7"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row1left">
	    	<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        android:textStyle="bold"
		        android:text="@string/bill_amount" />
	        
	    </RelativeLayout>
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".3"
	    	android:paddingTop="4dp"
	    	android:paddingBottom="4dp"
	    	android:id="@+id/row1right">
	    	<EditText
			    android:id="@+id/billEntry"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:ems="10"
			    android:inputType="numberDecimal" >
	
		    <requestFocus />
			</EditText>
	        
	    </RelativeLayout>
	    
	</LinearLayout>

	<LinearLayout
        android:baselineAligned="true"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    android:padding="0dp"
	    android:id="@+id/row2">
	    
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".7"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row2right">
	    	<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        android:textStyle="bold"
		        android:text="@string/percent" />
	        
	    </RelativeLayout>
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".8"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row2center">
	    	<TextView
		        android:id="@+id/percentValue"
		        android:layout_width="fill_parent"
		        android:layout_height="16dp"/>
	        
	    </RelativeLayout>
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".5"
	    	android:paddingTop="4dp"
	    	android:paddingBottom="4dp"
	    	android:id="@+id/row2left">
	    	<SeekBar
			    android:id="@+id/percentSeek"
			    android:max="30"
			    android:progress="15"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content" />
	        
	    </RelativeLayout>
	    
	</LinearLayout>
	<LinearLayout
        android:baselineAligned="true"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    android:padding="0dp"
	    android:id="@+id/row3">
	    
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".7"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row3left">
	    	<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        android:textStyle="bold"
		        android:text="@string/tip" />
	        
	    </RelativeLayout>
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".3"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row3right">
	    	<TextView
	    	    android:id="@+id/tipValue"
	    	    android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        />
	    	
	        
	    </RelativeLayout>
	    
	</LinearLayout>
	<LinearLayout
        android:baselineAligned="true"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    android:padding="0dp"
	    android:id="@+id/row4">
	    
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".7"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row4left">
	    	<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        android:textStyle="bold"
		        android:text="@string/total" />
	        
	    </RelativeLayout>
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".3"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row4right">
	    	<TextView
	    	    android:id="@+id/totalValue"
	    	    android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        />
	    	
	        
	    </RelativeLayout>
	    
	</LinearLayout>
	
	<LinearLayout
        android:baselineAligned="true"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    android:padding="0dp"
	    android:id="@+id/row5">
	    
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".7"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row5left">
	    	<TextView
		        android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        android:textStyle="bold"
		        android:text="@string/split_bill" />
	        
	    </RelativeLayout>
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".3"
	    	android:paddingTop="4dp"
	    	android:paddingBottom="4dp"
	    	android:id="@+id/row5right">
	    	<Spinner
	            android:id="@+id/splitSpinner"
	            android:layout_width="fill_parent"
	            android:layout_height="fill_parent"/>
	        
	    	
	        
	    </RelativeLayout>
	    
	</LinearLayout>
	<LinearLayout
        android:baselineAligned="true"
	    android:layout_width="match_parent"
	    android:layout_height="48dp"
	    android:orientation="horizontal"
	    android:padding="0dp"
	    android:id="@+id/row6">
	    
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".7"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row6left">
	    	<TextView
	    	    android:id="@+id/per_person"
		        android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        android:textStyle="bold"
		        android:text="@string/per_person" />
	        
	    </RelativeLayout>
	    <RelativeLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="48dp"
	    	android:layout_weight=".3"
	    	android:paddingTop="16dp"
	    	android:paddingBottom="16dp"
	    	android:id="@+id/row6right">
	    	<TextView
	    	    android:id="@+id/personValue"
	    	    android:layout_width="fill_parent"
		        android:layout_height="16dp"
		        />
	        
	    	
	        
	    </RelativeLayout>
	    
	</LinearLayout>
	
</LinearLayout>